--- a/index.html
+++ b/index.html
@@ -1,45 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+
+
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12 title text-center mt-5">
+        <h3>
+          Reliable, efficient delivery
+        </h3>
+        <h3>
+          Powered by Technology
+        </h3>
+        <p class="pt-3 pb-5">
+          Our Artificial Intelligence powered tools use millions of project data points
+          to ensure that your project is successful
+        </p>
+      </div>
+    </div>
+  </div>
+
   
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  <main class="container">
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    <div class="row">
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+      <div class="col-12 col-xl-4">
+        <div class="card card-1 mb-4">
+          <div class="card-body">
+            <h4 class="card-title">Supervisor</h4>
+            <p class="card-text">Monitors activity to identify project roadblocks</p>
+          </div>
+        </div>
+      </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+    </div>
 
-  
+    <div class="row">
+
+      <div class="col-12 col-xl-4">
+        <div class="card card-2 mb-4">
+          <div class="card-body">
+            <h4 class="card-title">Team Builder</h4>
+            <p class="card-text">Scans our talent network to create the optimal team for your project</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xl-4">
+        <div class="card card-3 mb-4">
+          <div class="card-body">
+            <h4 class="card-title">Karma</h4>
+            <p class="card-text">Regularly evaluates our talent to ensure quality</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-xl-4">
+        <div class="card card-4 mb-4">
+          <div class="card-body">
+            <h4 class="card-title">Calculator</h4>
+            <p class="card-text">Uses data from past projects to provide better delivery estimates</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">@aaronbarcenas</a>.
     </p>
   </footer>
 </body>
+
 </html>
