add practica de 4 contenedores responsive terminada

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <body>
 
   <div class="container">
-    <div class="row">
-      <div class="col-12 title text-center mt-5">
+    <div class="row d-flex justify-content-center">
+      <div class="col-12 col-xl-6 title text-center mt-5">
         <h3>
           Reliable, efficient delivery
         </h3>
@@ -54,7 +54,7 @@
 
     <div class="row">
 
-      <div class="col-12 col-xl-4">
+      <div class="col-12 col-xl-4 d-flex align-items-center">
         <div class="card card-1 mb-4">
           <div class="card-body">
             <h4 class="card-title">Supervisor</h4>
@@ -63,32 +63,28 @@
         </div>
       </div>
 
-    </div>
-
-    <div class="row">
 
       <div class="col-12 col-xl-4">
+
         <div class="card card-2 mb-4">
           <div class="card-body">
             <h4 class="card-title">Team Builder</h4>
             <p class="card-text">Scans our talent network to create the optimal team for your project</p>
           </div>
         </div>
-      </div>
 
-      <div class="col-12 col-xl-4">
         <div class="card card-3 mb-4">
           <div class="card-body">
             <h4 class="card-title">Karma</h4>
             <p class="card-text">Regularly evaluates our talent to ensure quality</p>
           </div>
         </div>
+
       </div>
 
-    </div>
+      
 
-    <div class="row">
-      <div class="col-12 col-xl-4">
+      <div class="col-12 col-xl-4 d-flex align-items-center">
         <div class="card card-4 mb-4">
           <div class="card-body">
             <h4 class="card-title">Calculator</h4>
@@ -96,6 +92,7 @@
           </div>
         </div>
       </div>
+      
     </div>
 
   </main>
